--- a/semana3/template-loja (1)/index.html
+++ b/semana3/template-loja (1)/index.html
@@ -4,33 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Loja Geek Oficial</title>
 </head>
 <body>
-    <div>
-        <h1>Bem-vind@ a <em>Geek Oficial</em>!</h1>
-        <p>Frase de chamada para sua loja</p>
-    </div>
+    
+        <div class="chamada">
+            <h1>Bem-vind@ ao <em>Geek Oficial</em>!</h1>
+            <p> <strong> Loja para pessoas fãs de conteúdos geeks</strong> </p>
+        </div>      
+    
 
-    <div>
-        <a href="index.html">Página Inicial</a>
+    <div class="links">
         <a href="ctrl-estoque.html">Controle de Estoque</a>
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
     </div>
 
-    <div>
+    <div class="loja">
         <!-- ADICIONAR INFORMAÇOES SOBRE SUA LOJINHA -->
         Loja para pessoas fãs de conteúdos geeks
     </div>
 
-    <div>
+    <div class="rodape">
         <p>Siga-nos nas redes sociais!</p>
 
-        <div>
-            <img src="https://image.flaticon.com/icons/png/512/25/25305.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/25/25425.png"/>
-            <img src="https://image.flaticon.com/icons/png/512/8/8800.png"/>
+        <div class="rodape-img">
+            <img src="https://image.flaticon.com/icons/png/512/25/25305.png" alt="facebook" width="70"/>
+            <img src="https://image.flaticon.com/icons/png/512/25/25425.png" alt="instagram" width="70"/>
+            <img src="https://image.flaticon.com/icons/png/512/8/8800.png" alt="twitter" width="70"/>
         </div>
     </div>
 </body>
