--- a/semana3/template-loja (1)/add-produto.html
+++ b/semana3/template-loja (1)/add-produto.html
@@ -4,41 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Adicionar Produto</title>
 </head>
 <body>
-    <div>
-        <p>Geek Oficial</p>
+    <div class="geek">
+        <p><strong>Geek Oficial</strong></p>
     </div>
 
-    <div>
+    <div class="links">
         <a href="index.html">Página Inicial</a>
         <a href="ctrl-estoque.html">Controle de Estoque</a>
-        <a href="add-produto.html">Adicionar Produto</a>
+        
         <a href="funcionarios.html">Funcionários</a>
+        
     </div>
 
 
-    <h2>Adicionar Produto</h2>
-    <form action="">
-        <div>
+    <h2 class="titulo">Adicionar Produto</h2>
+    <form class="formulario" action="">
+        <div class="form">
             <label for="link-foto">Link para foto: </label>
             <input type="url" id="link-foto" name="link-foto">
         </div>
 
-        <div>
+        <div class="form" >
             <label for="descricao">Descrição do produto: </label>
             <!-- Adicione o id apropriado para o input abaixo -->
             <input type="text" id="descricao" name="descrição">
         </div>
 
-        <div>
+        <div class="form">
             <label for="preco">Preço (em R$): </label>
             <!-- Adicione o id apropriado e o type para receber números abaixo -->
             <input type="number" id="preco" name="preço">
         </div>
 
-        <div>
+        <div class="form">
             <!-- Preencha as propriedades necessárias para os elementos abaixo -->
             <label for="quantidade"> Quantidade disponível: </label>
             <input type="number" id="quantidade" name="quantidade">
