--- a/semana3/template-loja (1)/ctrl-estoque.html
+++ b/semana3/template-loja (1)/ctrl-estoque.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Controle de Estoque</title>
 </head>
 <body>
-    <div>
-        <p>Geek Oficial</p>
+    <div class="geek">
+        <p><strong>Geek Oficial</strong></p>
     </div>
 
-    <div>
+    <div class="links">
         <a href="index.html">Página Inicial</a>
-        <a href="ctrl-estoque.html">Controle de Estoque</a>
+        
         <a href="add-produto.html">Adicionar Produto</a>
         <a href="funcionarios.html">Funcionários</a>
+        
     </div>
 
-    <h2>Controle de Estoque</h2>
+    <h2 class="titulo">Controle de Estoque</h2>
 
     <table>
         <tr>
